--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "koa-multer": "^1.0.2",
     "koa-router": "^7.2.1",
     "koa-send": "^4.1.0",
+    "koa-static-etag": "^1.0.0",
     "koa2": "^2.0.0-alpha.7",
     "mongoose": "^4.11.6",
     "yargs": "^8.0.2"
