--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "简盟网站",
   "main": "index.js",
   "dependencies": {
+    "faststart": "^1.0.0",
     "koa-body": "^2.3.0",
     "koa-ejs": "^4.1.0",
     "koa-generic-session": "^2.0.0",
