--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "mongoose": "^4.11.6",
     "yargs": "^8.0.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "koa-video": "^1.0.0"
+  },
   "scripts": {
     "start": "node index.js --p=true",
     "test": "echo \"Error: no test specified\" && exit 1"
